--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "migration:generate": "npm run typeorm migration:generate -- -n"
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/database/ormconfig.ts",
+    "migration:generate": "yarn typeorm migration:generate -- -n"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -28,7 +28,6 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
-    "dotenv": "^8.6.0",
     "pg": "^8.7.1",
     "postgres": "^1.0.2",
     "reflect-metadata": "^0.1.13",
